修复转换bug